testing more event lsiteners

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        Device <button> hi </button> Shop
+        Device Shop <button id="headButton">hi</button>
     </header>
 
     <main>
