--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <p>Please select which devices you would like to purchase</p>
+        <p>Come purchase our wide selection of Phones!</p>
         <div id="device-container"> </div>
     </main>
     <script src="index.js"></script>
